include_directories(${CMAKE_SOURCE_DIR}/controllers)

add_subdirectory(program_template)
add_subdirectory(run_away_by_bumpers)
add_subdirectory(simple_demo)
add_subdirectory(porting_example)
add_subdirectory(sand_timer_test)

# user TODO: add here new controller's sub-directories
add_subdirectory(test_program)
add_subdirectory(simple_test)
add_subdirectory(ex2)
add_subdirectory(walkingOnGrid)

